--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 Aveta is a two wheel drive robot.
 
-<img src="images/aveta-still.jpg" />
-<img src="images/aveta-spiral.jpg" />
+<img src="images/aveta-still.jpg" alt="aveta the robot standing still being charged" />
+<img src="images/aveta-spiral.jpg" alt="aveta the robot in a spiral path" />
 
 `driving/command.py` is the main control program.
